# focus-fox

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release-please.yml  release.yml
docs/superpowers/plans/: 2026-07-23-statistics.md
docs/superpowers/specs/: 2026-07-23-statistics-design.md
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/notify/: mod.rs
src/stats/: mod.rs  store.rs
src/timer/: mod.rs
src/tui/: app.rs  mod.rs  ui.rs
